344621  Fix memcheck/tests/err_disable4 test on OS X
344686  Fix suppression for pthread_rwlock_init on OS X 10.10
344702  Fix missing libobjc suppressions on OS X 10.10
344939  Fix memcheck/tests/xml1 on OS X 10.10
345016  helgrind/tests/locked_vs_unlocked2 is failing sometimes
345394  Fix memcheck/tests/strchr on OS X
345637  Fix memcheck/tests/sendmsg on OS X
346307  fuse filesystem syscall deadlocks
n-i-bz  Provide implementations of certain compiler builtins to support
        compilers who may not provide those
n-i-bz  Old STABS code is still being compiled, but never used. Remove it.
n-i-bz  Fix compilation on distros with glibc < 2.5
n-i-bz  (vex 3098) Avoid generation of Neon insns on non-Neon hosts
345695  Add support for the auxvex entries AT_DCHCEBSIZE and AT_HWCAP2
        entries on ppc.
346267  Fix compiler warning about casting arguments, ppc64.
346324  Add support for the ppc instructions lbarx, lharx, stbcs, sthcs
346416  Add support for LL_IOC_PATH2FID and LL_IOC_GETPARENT Lustre ioctls
n-i-bz  Enable rt_sigpending syscall on ppc64 linux.
346474  Added support for accessing the PPC64 TEXASRU register
346487  Change PPC64 function calls with 128-bit values to use a pointer so
        the compiler will not generate a note about an ABI change.


Release 3.10.1 (25 November 2014)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3.10.1 is a bug fix release.  It fixes various bugs reported in 3.10.0
and backports fixes for all reported missing AArch64 ARMv8 instructions
and syscalls from the trunk.  If you package or deliver 3.10.0 for others
to use, you might want to consider upgrading to 3.10.1 instead.

The following bugs have been fixed or resolved.  Note that "n-i-bz"
stands for "not in bugzilla" -- that is, a bug that was reported to us
but never got a bugzilla entry.  We encourage you to file bugs in
bugzilla (https://bugs.kde.org/enter_bug.cgi?product=valgrind) rather
than mailing the developers (or mailing lists) directly -- bugs that