@@ -151,6 +151,7 @@ where XXXXXX is the bug number as listed below.
 345016  helgrind/tests/locked_vs_unlocked2 is failing sometimes
 345394  Fix memcheck/tests/strchr on OS X
 345637  Fix memcheck/tests/sendmsg on OS X
+345887  Fix an assertion in the address space manager
 346307  fuse filesystem syscall deadlocks
 n-i-bz  Provide implementations of certain compiler builtins to support
         compilers who may not provide those
